--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,10 @@ p {
 }
 
 .mindhouse {
-   background-color: blue
+   background-color: blue;
 }
 
 .skills {
-   background-color: red
+   background-color: red;
 }
 
