--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,10 @@ p {
 }
 
 .skills {
-   background-color: red;
-   color: white;
-   width:200px;
-   height:200px;
+  padding:20px;
+  width:250px;
+  height:250px;
+  border: 1px solid black;
+  color: blue;
 }
 
