--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,9 @@ p {
   padding:20px;
 }
 .trippy{
-  margin:20px;
-  border:20px;
   padding:20px;
+  width:250px;
+  height:250px;
+  border: 1px solid black;
+  color: blue;
 }
