--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,10 @@ p {
   border: 1px solid black;
   color: blue;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
