--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,14 @@ p {
   color: blue;
 }
 
+.trippy{
+  padding:20px;
+  width:250px;
+  height:250px;
+  border: 1px solid black;
+  color: blue;
+}
+
 .center {
   display: block;
   margin-left: auto;
